--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
 							<li><a href="about.html">About</a></li>
+							<li><a href="landing.html">Solutions</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
