replace section image

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/site-bg.png" alt="" />
+										<img src="images/hero.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="index.html" class="link">Dynamic Business Showcase</a></h3>
