--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="inner">
+									<span class="image">
+										<img src="images/hero.png" alt="" />
+									</span>
 									<header class="major">
 										<h2>Let's Bring Your Vision to Life</h2>
 									</header>
